--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
+
+#S3
+spring.cloud.aws.credentials.access-key=${S3_ACCESS_KEY}
+spring.cloud.aws.credentials.secret-key=${S3_SECRET_KEY}
+spring.cloud.aws.region.static=ap-northeast-2
+spring.cloud.aws.s3.bucket=${S3_BUCKET_NAME}
