feat: 요양 시설 제휴 코드 생성 및 암호화 로직 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,10 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 
 # Swagger
 springdoc.swagger-ui.path=/docs
+
+# 양방향 암호화(TextEncryptor) 설정
+encryptor.secret-key=${ENCRYPTOR_SECRET_KEY}
+encryptor.salt=${ENCRYPTOR_SALT}
+
+# Admin-only API Secret Key
+admin.secret-key=${ADMIN_SECRET_KEY}
