feat : jwt 관련 코드 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,7 @@ encryptor.salt=${ENCRYPTOR_SALT}
 
 # Admin-only API Secret Key
 admin.secret-key=${ADMIN_SECRET_KEY}
+
+#JWT
+jwt.secret=${jwt.secret}
+jwt.expiration=${jwt.expiration}
