style: JWT 설정 변수 참조 형식 통일

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,5 +34,5 @@ encryptor.salt=${ENCRYPTOR_SALT}
 admin.secret-key=${ADMIN_SECRET_KEY}
 
 #JWT
-jwt.secret=${jwt.secret}
-jwt.expiration=${jwt.expiration}
+jwt.secret=${JWT_SECRET}
+jwt.expiration=${JWT_EXPIRATION}
